# task-automator

./: .gitignore  404.html  LICENSE  README.md  index.html  pyproject.toml  sitemap.xml
.github/workflows/: docs.yaml
docs/website/: mkdocs.yml
docs/website/docs/: index.md
examples/simple_tasks/: automator.py  my_automator.py  tasks.py
src/py_automator/: automator.py  github_utils.py
src/py_automator/examples/: automation_tree.py  automations.py
src/task_automator/: automator.py  github_utils.py
src/task_automator/IO/: directory.py  file.py
src/task_automator/examples/: automation_tree.py  automations.py
src/task_automator/utils/: web_utils.py
