[project]
name = "py-automator"
version = "0.1.0"
description = ""
authors = [
    {name = "Martin Urban",email = "martin.urban@studmail.w-hs.de"}
]
license = {text = "LICENSE"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
