[project]
name = "task-automator"
version = "0.1.1"
description = "Task-Automator is a modern Python framework for building declarative command-line interfaces with nested subcommands, designed for automation workflows and build systems."
authors = [
    {name = "Martin Urban",email = "martin.urban@studmail.w-hs.de"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
